src/index.css
html, body, div, span, applet, object, iframe,
h1, h2, h3, h4, h5, h6, p, blockquote, pre,
a, abbr, acronym, address, big, cite, code,
del, dfn, em, img, ins, kbd, q, s, samp,
small, strike, strong, sub, sup, tt, var,
b, u, i, center,
dl, dt, dd, ol, ul, li,
fieldset, form, label, legend,
table, caption, tbody, tfoot, thead, tr, th, td,
article, aside, canvas, details, embed, 
figure, figcaption, footer, header, hgroup, 
menu, nav, output, ruby, section, summary,
time, mark, audio, video, nav {
	margin: 0;
	padding: 0;
	border: 0;
	font-size: 100%;
	font: inherit;
	vertical-align: baseline;
  color: black;
  text-decoration: none;
}
/* HTML5 display-role reset for older browsers */
article, aside, details, figcaption, figure, 
footer, header, hgroup, menu, nav, section {
	display: block;
}
body {
	line-height: 1;
}
ol, ul {
	list-style: none;
}
blockquote, q {
	quotes: none;
}
blockquote:before, blockquote:after,
q:before, q:after {
	content: '';
	content: none;
}
table {
	border-collapse: collapse;
	border-spacing: 0;
}

body {
  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
    sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

code {
  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
    monospace;
}

* {
  box-sizing: border-box;
}

/* ----------------- Global Values ----------------- */

:root {
  /* Root colors */
  --light-blue: rgb(142, 202, 230); /* #8ECAE6 */
  --blue: rgb(33, 158, 188); /* #219EBC */
  --dark-blue: rgb(2, 48, 71); /* #023047 */
  --black-blue: rgb(2, 35, 51); /* #022333 */
  --bright-orange: rgb(255, 183, 3); /* #FFB703 */
  --orange: rgb(251, 133, 0); /* #FB8500 */
  --white: rgb(216, 216, 216); /* #D9D9D9 */
  --light-gray: rgb(195, 195, 195); /* #C4C4C4 */
  --gray: rgb(153, 153, 153); /* #999999 */
  --dark-gray: rgb(112, 112, 112); /* #707070 */
  --black-gray: rgb(54, 54, 54); /* #363636 */

}

/* ----------------- Overall Website Structures ----------------- */

.main-background {
  /* background-image: url("./images/renato-pozzi-G4oGYy_ZcsQ-unsplash.jpg"); */
  width: 100vw;
  height: 100vh;
  position: fixed;
  z-index: -5;
  background-size: cover;
  background-position: bottom;
}

.checkbox-hidden {
  background: rgba(0, 0, 0, 0.5);
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  position: fixed;
  z-index: 3;
}

.container {
  margin: auto;
  width: 90%;
  max-width: 1280px;
  display: grid;
}

.container > div:first-child {
  padding: 3rem 0;
  margin: 0 auto;
  /* padding-to 3rem; */
}

/* ----------------- Charts ----------------- */
/* .chart {
  display: block;
  width: calc(100%);
} */

/* .chart > div {
  height: 100% !important;
  width: 0 !important;
} */

.test-chart:hover {
  border: 0;
}

.tooltip-custom {
  padding: .5rem;
  background: rgba(255, 255, 255, 0.2);
  border-radius: 4px;
  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.95);
  backdrop-filter: blur(5px);
  -webkit-backdrop-filter: blur(5px);
  border: 1px solid rgba(255, 255, 255, 0.3) !important;
  /* max-width: 50%; */
  min-width: 150px;
  color: var(--white) !important;
}

.tooltip-label {
  font-size: 1.2rem;
  font-family: "source-sans-pro", sans-serif;
  font-weight: 700;
}

.tooltip-intro {
  font-family: "quasimoda", sans-serif;
}

.tooltip-label, .tooltip-intro {
  color: var(--white);
}

.recharts-tooltip-wrapper {
  max-width: 50%;
  color: var(--white);
}

/* ----------------- Grid ----------------- */

.column-one, .column-two-even, .column-two-left-third, .column-two-left-forth, .column-two-right-third, .column-two-right-forth, .column-three-even, .column-four-even {
  display: grid;
  /* border: 1px solid green; */
  padding: 2rem 0;
  margin: 2rem 0;
}

.column-two-even {
  grid-template-columns: repeat(2, 1fr);
}

.column-one > div:first-child,
.column-two-even > div:first-child, 
.column-two-left-third > div:first-child,
.column-two-left-forth > div:first-child,
.column-three-even > div:first-child,
.column-two-right-third > div:first-child,
.column-two-right-forth > div:first-child,
.column-four-even > div:first-child 
{
  position: absolute;
  width: 100%;
  height: 35rem;
  background-color: var(--black-blue);
  left: 0;
  /* opacity: .5; */
  z-index: -4;
  transform: translateY(-3rem);
}

.background-color-one {
  background-color: aquamarine !important;
  opacity: 1 !important;
}


.column-two-even > div:nth-child(2), 
.column-two-left-third > div:nth-child(2),
.column-two-left-forth > div:nth-child(2),
.column-three-even > div:nth-child(2),
.column-two-right-third > div:nth-child(2),
.column-two-right-forth > div:nth-child(2),
.column-four-even > div:nth-child(2)
{
  grid-column-start: 1;
  grid-column-end: 6;
  border: 1px solid purple;
  justify-self: center;
}

.column-two-even > div:last-child, 
.column-two-left-third > div:last-child,
.column-two-left-forth > div:last-child,
.column-three-even > div:last-child,
.column-two-right-third > div:last-child,
.column-two-right-forth > div:last-child,
.column-four-even > div:last-child 
{
  grid-column-start: 1;
  grid-column-end: 6;
  justify-self: center;
}

.column-two-left-third {
  grid-template-columns: 2fr 1fr;
}

.column-two-left-forth {
  grid-template-columns: 3fr 1fr;
}

.column-two-right-third {
  grid-template-columns: 1fr 2fr;
}

.column-two-right-forth {
  grid-template-columns: 1fr 3fr;
}

.column-three-even {
  grid-template-columns: repeat(3, 1fr);
}

.column-four-even {
  grid-template-columns: repeat(4, 1fr);
}


/* ----------------- Background Images ----------------- */
.background-img-1 {
  background-image: url("./images/pramod-tiwari-IDFBM5QvoY0-unsplash.jpg");
  background-color: white;
  background-size: cover;
  overflow: hidden;
  background-position: bottom;
  max-width: 100%;
  max-height: 100%;
  height: 250px;
}

.background-img-1 h1 {
  align-self: flex-end;
  justify-self: center;
}
/* ... */

